Prevent most names from overflowing results.

--- a/src/Game/results.css
+++ b/src/Game/results.css
@@ -23,7 +23,7 @@
 
 @media (min-width: 726px) {
   .results .side {
-    width: 170px;
+    width: 260px;
   }
 }
 
